--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,4 +1,4 @@
-<!-- Then, it should render the show.erb view page. That view should use ERB to render the @article's title and content. -->
+<!-- Then, it should render the show.erb view page. That view should use ERB to render the @article's title and content.
 
 <form method="post" action="/articles/<%= @article.id %>/delete">
     <input id="hidden" type="hidden" name="_method" value="DELETE">
