--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,2 +1,9 @@
 
-<!-- That view should use ERB to iterate over @articles and render them on the page.
+<!-- That view should use ERB to iterate over @articles and render them on the page. -->
+<h1>Articles</h1>
+
+<ol>
+    <% @articles.each do |article| %>
+        <li><%= article.name %></li>
+    <% end %>
+</ol>
