--- a/app/views/articles/index.erb
+++ b/app/views/articles/index.erb
@@ -1,9 +1,12 @@
 
-<!-- That view should use ERB to iterate over @articles and render them on the page. -->
+<!-- That view should use ERB to iterate over @articles and
+render them on the page. -->
+
+
 <h1>Articles</h1>
 
 <ol>
-    <% @articles.each do |article| %>
+    <% @articles.each do |article| %> <!-- Loads all articles into an instance variable, render to corresponding invdex view.  -->
         <li><%= article.name %></li>
     <% end %>
 </ol>
