--- a/app/views/articles/index.erb
+++ b/app/views/articles/index.erb
@@ -6,7 +6,7 @@ render them on the page. -->
 <h1>Articles</h1>
 
 <ol>
-    <% @articles.each do |article| %> <!-- Loads all articles into an instance variable, render to corresponding invdex view.  -->
+    <% @articles.each do |article| %>
         <li><%= article.name %></li>
     <% end %>
 </ol>
