--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -4,3 +4,6 @@
     <input id="hidden" type="hidden" name="_method" value="DELETE">
     <input type="submit" value="delete">
 </form>
+-->
+
+<h1><% @post.name %></h1>
