Automatically backed up by Learn

--- a/app/views/articles/index.erb
+++ b/app/views/articles/index.erb
@@ -9,7 +9,7 @@ render them on the page. -->
     <% @articles.each do |article| %>
         <li>
             <a href="/posts/<%= post.id %>">
-                <%= article.name %>
+                <%= article.title %>
             </a>
         </li>
     <% end %>
