Automatically backed up by Learn

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,8 +1,10 @@
 <!-- Then, it should render the show.erb view page. That view should use ERB to render the @article's title and content.
 
-<form method="post" action="/articles/<%= @article.id %>/delete">
+<form  action="/articles/<%= @article.id %>/delete" method="post">
+
     <input id="hidden" type="hidden" name="_method" value="DELETE">
     <input type="submit" value="delete">
+
 </form>
 -->
 
