Automatically backed up by Learn

--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,8 +1,13 @@
-<!--
-<form method="post" action="/articles">
-<label for="title">Article Title: </label>
+<h1>Create an Article</h2>
+
+<form action="/articles" method="post">
+
+<!--<label for="title">Article Title: </label>
     <input type="text" name="title" id="title">
+
 <label for="content">Article Content: </label>
-    <input type="text" name="content" id="content">
-<input type="submit" name="submit"
+    <input type="text" name="content" id="content"> -->
+
+<input type="submit" name="submit">
+
 </form>
