--- a/app/views/articles/new.erb
+++ b/app/views/articles/new.erb
@@ -8,6 +8,6 @@
 <label for="content">Article Content: </label>
     <input type="text" name="content" id="content"> -->
 
-<input type="submit" name="submit">
+<input type="submit" />
 
 </form>
