Automatically backed up by Learn

--- a/app/views/articles/new.erb
+++ b/app/views/articles/new.erb
@@ -1,13 +1,16 @@
 <h1>Create an Article</h2>
 
 <form action="/articles" method="post">
+    <p>
+<!--<label for="title">Article Title: </label>-->
+    <input type="text" name="title" />
+</p>
 
-<!--<label for="title">Article Title: </label>
-    <input type="text" name="title" id="title">
+<!--<label for="content">Article Content: </label>-->
 
-<label for="content">Article Content: </label>
-    <input type="text" name="content" id="content"> -->
-
+<p>
+    <textarea name="content" />
+</p>
 <input type="submit" />
 
 </form>
