Automatically backed up by Learn

--- a/app/views/articles/new.erb
+++ b/app/views/articles/new.erb
@@ -9,7 +9,7 @@
 <!--<label for="content">Article Content: </label>-->
 
 <p>
-    <textarea name="content" />
+    <textarea name="content"> </textarea>
 </p>
 <input type="submit" />
 
