--- a/app/views/articles/index.erb
+++ b/app/views/articles/index.erb
@@ -8,7 +8,7 @@ render them on the page. -->
             <a href="/posts/<%= post.id %>">
                 <%= article.title %>
             </a>
-            <p><% article.content %></p>
+            <p><%= article.content %></p>
         </li>
     <% end %>
 </ol>
