Automatically backed up by Learn

--- a/app/views/articles/edit.erb
+++ b/app/views/articles/edit.erb
@@ -7,7 +7,7 @@ You'll need to make sure the edit form includes:
 <form action="/articles/<%= @article.id %>" method="post">
     <p>
 <!--<label for="title">Article Title: </label>-->
-    <input type="text" name="title" value="<%=@article.name %>"/>
+    <input type="text" name="title" value="<%=@article.title %>"/>
 </p>
 
 <!--<label for="content">Article Content: </label>-->
