--- a/app/views/articles/edit.erb
+++ b/app/views/articles/edit.erb
@@ -4,7 +4,7 @@ You'll need to make sure the edit form includes:
 <input id="hidden" type="hidden" name="_method" value="PATCH"> -->
 <h1>Edit <%=@article.title %></h2>
 
-<form action="/articles/<%= @article.id %>" method="post">
+<form action="/articles/<%= @article.id %>" method="patch">
     <p>
 <!--<label for="title">Article Title: </label>-->
     <input type="text" name="title" value="<%=@article.title %>"/>
