--- a/app/views/articles/edit.erb
+++ b/app/views/articles/edit.erb
@@ -1,10 +1,12 @@
 <!--This view should contain a form to update a specific article and POSTs to a controller action, patch '/articles/:id'
 You'll need to make sure the edit form includes:
 
-<input id="hidden" type="hidden" name="_method" value="PATCH"> -->
+ -->
 <h1>Edit <%=@article.title %></h2>
 
-<form action="/articles/<%= @article.id %>" method="patch">
+<form action="/articles/<%= @article.id %>" method="post">
+    <input type="hidden" name="_method" value="PATCH">
+
     <p>
 <!--<label for="title">Article Title: </label>-->
     <input type="text" name="title" value="<%=@article.title %>"/>
