--- a/app/views/articles/show.erb
+++ b/app/views/articles/show.erb
@@ -12,4 +12,4 @@
 
 <p><%= @article.content %></p>
 
-<p><a href="/articles/<% @articles.id %>/edit">Edit</a></p>
+<p><a href="/articles/<%= @article.id %>/edit">Edit</a></p>
