Automatically backed up by Learn

--- a/app/views/articles/show.erb
+++ b/app/views/articles/show.erb
@@ -8,7 +8,7 @@
 <p><a href="/articles/<%= @article.id %>/edit">Edit</a></p>
 
 <p>
-<form action="/articles/<%= @articles.id %>" method="post">
+<form action="/articles/<%= @article.id %>" method="post">
     <input type="hidden" name="_method" value="DELETE">
     <input type="submit" value="Delete Article">
 </p>
